--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 html {
-    background: url('/images/xubuntu-zesty.png');
+    background: #000;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,19 +13,22 @@ body {
     margin-top: 30px;
     box-sizing: border-box;
     background: rgba(255, 255, 255, 0.1);
-    box-shadow: 0 4px 10px 0 rgba(250, 250, 250, 0.304);
+    outline: .01rem solid #222;
     backdrop-filter: blur(13px);
     -webkit-backdrop-filter: blur(13px);
-    border-radius: 10px;
+    border-radius: 5px;
     border: 1px solid rgba(255, 255, 255, 0.18);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 } 
 #container {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 200px;
+    margin-top: 2em;
+    margin-bottom: 1em;
     position: relative;
+    
  
 }
 #gameTitle {
@@ -34,10 +37,12 @@ body {
     align-items: center;
     justify-content: center;
     font-size: 3rem;
+    font-weight: 900;
+    
 }
 button {
-    width: 140px;
-    height: 140px;
+    width: 100px;
+    height: 100px;
     margin: 10px;
     font-weight: 800;
     border-radius: 70px;
@@ -53,7 +58,7 @@ button:hover {
     border-radius: 50%;
 }
 #scores {
-    color: #fff;
+    color: #999;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -64,6 +69,12 @@ button:hover {
     display: flex; 
     justify-content: center; 
     align-items: center; 
-    color: rgb(73, 3, 3); 
-    font-size: 50px;
+    color: rgb(164, 238, 248); 
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+#playerScore, #computerScore {
+    font-size: 25px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 500;
 }
