--- a/styles/style.css
+++ b/styles/style.css
@@ -1,27 +1,30 @@
-html {
-    background: #000;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+body {
+    background: #7f1d1d;
     display: flex;
     justify-content: center;
     align-items: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
-body {
-    width: 60%;
-    height: auto;
-    padding: 5%;
-    margin-top: 30px;
-    box-sizing: border-box;
+#container {
+    width: 40rem;
+    height: 30rem;
+    margin-top: 20px;
+    display: grid;
     background: rgba(255, 255, 255, 0.1);
-    outline: .01rem solid #222;
     backdrop-filter: blur(13px);
     -webkit-backdrop-filter: blur(13px);
     border-radius: 5px;
-    border: 1px solid rgba(255, 255, 255, 0.18);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    grid-template: .2fr 2fr 1fr .5fr;   
 
-} 
-#container {
+}
+
+#game {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -29,8 +32,8 @@ body {
     margin-bottom: 1em;
     position: relative;
     
- 
 }
+
 #gameTitle {
     color: #fff;
     display: flex;
@@ -40,9 +43,9 @@ body {
     font-weight: 900;
     
 }
-button {
-    width: 100px;
-    height: 100px;
+.gameoptions {
+    width:5rem;
+    height: 5rem;
     margin: 10px;
     font-weight: 800;
     border-radius: 70px;
@@ -50,11 +53,12 @@ button {
     border: #fff;
 }
 button:hover {
+    cursor: pointer;
     transform: scale(1.05);
 }
 .pic {
-    width: 70%;
-    height: 70%;
+    width: 3rem;
+    height: 3rem;
     border-radius: 50%;
 }
 #scores {
@@ -77,4 +81,27 @@ button:hover {
     font-size: 25px;
     font-family: 'Courier New', Courier, monospace;
     font-weight: 500;
+}
+#gameScreen {
+    padding: 20px;
+}
+#gameOverScreen {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color:#1c1917 ;
+}
+#winner {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 4rem;
+    color: aliceblue;
+}
+#newGame {
+    width: 7rem;
+    height: 2rem;
+    font-size: 1rem;
+    border: none;
+    border-radius: 5px;
+    margin-top: 10px;
 }
