--- a/styles/style.css
+++ b/styles/style.css
@@ -13,14 +13,15 @@ body {
 }
 #container {
     width: 40rem;
-    height: 30rem;
-    margin-top: 20px;
+    height: 25rem;
+    margin-top: 50px;
     display: grid;
     background: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(13px);
     -webkit-backdrop-filter: blur(13px);
     border-radius: 5px;
-    grid-template: .2fr 2fr 1fr .5fr;   
+    grid-template: .2fr 3fr 1fr .5fr; 
+    box-shadow: 5px 5px 8px #292524;
 
 }
 
